# algae-ws

./: .gitignore  .gitmodules  Makefile  README.md  bananapi_m64_defconfig  busybox.config  configure.py  linux_bpi.config  pkg1.mk  requirements.txt  xm_its_template
package/ap6212/: readme.md
package/evtest1/: Makefile  aloe_ev.doxyfile  ev.c  main.c  priv.h
package/evtest1/include/aloe/: ev.h
package/fftest1/: Makefile.am  appcfg.c  cfg.c  config.h.in  configure.ac  distclean.sh  ev.c  evmtest1.c  evmtest1.cpp  fftest1.c  main.c  misc.c  mod_cli.c  mod_test1_buf1.c  priv.h  time.c
package/fftest1/include/aloe/: ev.h
package/mkr4000/openocd/: bpi-openocd-interface.cfg  mkr4000-flash-bootloader.cfg  mkr4000-target.cfg
prebuilt/bpi/common/etc/: hostname-template  ld.so.cache  led.conf  lighttpd.conf
prebuilt/bpi/common/etc/ifplugd/: ifplugd.action
prebuilt/bpi/common/etc/init.d/: audio
prebuilt/bpi/common/root/: tftpget.sh
prebuilt/bpi/common/sbin/: led
prebuilt/bpi/common/var/www/: admin.html
prebuilt/bpi/etc/init.d/: network  wifi
prebuilt/bpi/sysvinit/etc/init.d/: bt  lighttpd-initd  network  restmon  wifi
prebuilt/common/etc/: fstab  group  hostname  inittab  ld.so.cache  ld.so.conf  mdev.conf  passwd  profile  resolv.conf  shadow  syslog.conf  udhcpd.conf  wpa_supplicant.conf
prebuilt/common/etc/ifplugd/: ifplugd.action
prebuilt/common/etc/init.d/: func  func_involved  func_test  mdnsd-initd  network  persist  rcS  start  stop  wifi
prebuilt/common/etc/skel/: .exrc  .profile
prebuilt/common/sbin/: func.sh  wpasup  zcipwrapper
prebuilt/common/usr/sbin/: testhostapd
prebuilt/common/usr/share/mdev/: default.sh  eth.sh  mount.sh
prebuilt/common/usr/share/udhcpc/: default.script
prebuilt/common/usr/share/zcip/: default.script
prebuilt/initramfs/: init
prebuilt/initramfs/common/: init
prebuilt/systemdinit/common/etc/systemd/: system.conf
prebuilt/systemdinit/common/lib/systemd/system/: fw_ignore_sysfs_fallback.service
prebuilt/systemdinit/common/lib/systemd/system/multi-user.target.wants/: fw_ignore_sysfs_fallback.service
prebuilt/sysvinit/etc/init.d/: func_test  mdev-initd  mdnsd-initd  persist  start  stop
